use  Integer.valueOf() instead of new Integer() which is deprecated in Java 9.