@@ -31,8 +31,8 @@ class SampleHandLayeredPane extends JLayeredPane {
     private void updateLayout() {
         removeAll();
         // layers from bottom to top.
-        add(cardsCanvas, new Integer(0));
-        add(flashOverlay, new Integer(1));
+        add(cardsCanvas, Integer.valueOf(0));
+        add(flashOverlay, Integer.valueOf(1));
         revalidate();
     }
 
